# simulation_interfaces

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: MultiStepSimulation.action
msg/: Bounds.msg  Collision.msg  Collisions.msg  Entity.msg  EntityCategories.msg  EntityCategory.msg  EntityFilters.msg  EntityInfo.msg  EntityState.msg  EntityWithState.msg  NamedPose.msg  PoseBounds.msg  Resource.msg  Result.msg  SimulationState.msg  SimulatorFeatures.msg  SpawnPose.msg  Spawnable.msg  SpawnableBounds.msg  TagsFilter.msg  WorldResource.msg
srv/: BatchSpawnEntities.srv  DeleteEntity.srv  GetAvailableWorlds.srv  GetCurrentWorld.srv  GetEntities.srv  GetEntitiesStates.srv  GetEntityBounds.srv  GetEntityInfo.srv  GetEntityState.srv  GetNamedPoseBounds.srv  GetNamedPoses.srv  GetSimulationState.srv  GetSimulatorFeatures.srv  GetSpawnPoses.srv  GetSpawnables.srv  LoadWorld.srv  ResetSimulation.srv  SetEntityInfo.srv  SetEntityState.srv  SetSimulationPaused.srv  SetSimulationState.srv  SpawnEntities.srv  SpawnEntity.srv  StepSimulation.srv  UnloadWorld.srv
